--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,8 +7,5 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 
-// Font Awesome
-@import "~@fortawesome/fontawesome-free/scss/fontawesome.scss";
-@import "~@fortawesome/fontawesome-free/scss/regular.scss";
-@import "~@fortawesome/fontawesome-free/scss/solid.scss";
-@import "~@fortawesome/fontawesome-free/scss/brands.scss";
+// Material Design Icons
+@import "~@mdi/font/scss/materialdesignicons"
